2007-03-24  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/Makefile.module.in:
	* nsperm/Makefile: Silence mkdir call during installation.

	* Makefile: Separated build-doc from the install target.
	Doc building has nothing to do with the installation.
	It must be performed as a separate step prior making
	the distribution file.
	Removed check for "dtplite" as this is now mandatory
	for build-doc target.

2007-03-23  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsthread/winthread.c: Removed home-brewn mutex code
	in favour of Windows CriticalSection.

2007-03-17  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile: make sure to copy .css files as well when
	installing .html docs

2007-03-17  Vlad Seryakov  <seryakov@users.sf.net>

        * include/nsthread.h:
        * include/ns.h:
        * nsd/nsd.h:
        * nsd/log/c:
        * nslog/nslog.c: Added O_LARGEFILE flag to open calls in
        logging modules, that will allow to support files > 2Gb. If that
        is not supported, fake O_LARGEFILE is defined.

2007-03-17  Vlad Seryakov  <seryakov@users.sf.net>

	* Makefile: make build-doc detect existance of dtplite
	when building documentation
        * include/ns.h:
        * nsd/tclobjv.c: Added new public function Ns_ObjvSet that retrieves
        ns_Set given as a parameter
        nsd/tclhttp.c: Ported task-based http retrieval facility from AS 4.5
        tree, changed to use Ns_ParseArgs. Added new subcommand list which shows
        currerntly running tasks with url and completion status
        * nsd/task.c: Added Ns_TaskCompleted function which just returns
        0 or 1 for any given task

2007-03-14  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/binder.c: Changed type to size_t to be compatible
	with 64 bits systems compiled on CentOS for example.

2007-02-23  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/ns_share.man:
	* doc/src/ns_getchannels.man:
	* doc/src/ns_var.man:
	* doc/src/ns_cp.man: